deleting extra files and different footer text

--- a/dungeon.html
+++ b/dungeon.html
@@ -159,7 +159,7 @@
 <div id="dungeon-tables"></div>
 
 <div class="footer">
-  Last Updated: <span id="last-updated"></span>
+  Market data: <span id="last-updated"></span>
 </div>
 
 <form method="post">
@@ -298,8 +298,14 @@ function setupCollapsibles() {
 
 fetchData();
 </script>
-#NerfStack
-   - Updated to new api by Physon
+    <p>
+      Fork by physon<br />
+      PM physon in game for issues, or put in a bug on <a href="https://github.com/GoldenHoundGit/sunstone">Github</a><br />
+      Big thanks and love to to: Metzil, Lurpa, miku, Joethedestroyer<br />
+      Originally by
+      <a href="https://github.com/GoldenHoundGit/sunstone">GoldenHound</a><br /><br />
+      <a href="https://mwilinks.site/">Milky Way Idle Link Collection</a>
+    </p>
 </body>
 </html>
 
