--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -1145,7 +1145,7 @@
     <p>
       Fork by physon<br />
       PM physon in game for issues, or put in a bug on <a href="https://github.com/GoldenHoundGit/sunstone">Github</a><br />
-      Big thanks and love to to: Metzil, Lurpa, miku, Joethedestroyer<br />
+      Big thanks and love to to: Metzli, Lurpa, miku, Joethedestroyer<br />
       Originally by
       <a href="https://github.com/GoldenHoundGit/sunstone">GoldenHound</a><br /><br />
       <a href="https://mwilinks.site/">Milky Way Idle Link Collection</a>
