--- a/dungeon.html
+++ b/dungeon.html
@@ -263,7 +263,7 @@ async function fetchData() {
         }
 
 
-        let html = `<button class="collapsible">${dungeon}</button><div class="content"><table><thead><tr><th>Item</th><th>Tokens</th><th>Ask Price</th><th>Bid Price</th><th>Money per Token</th></tr></thead><tbody>`;
+        let html = `<button class="collapsible">${dungeon}</button><div class="content"><table><thead><tr><th>Item</th><th>Tokens</th><th>Ask/Sell Price</th><th>Bid/Buy Price</th><th>Money per Token</th></tr></thead><tbody>`;
         for (const row of rows) {
             html += `<tr class="${bestItems.includes(row.item) ? 'highlight' : ''}"><td>${dungeonItemNamesEN[row.item]}</td><td>${row.tokens}</td><td>${row.ask !== -1 ? row.ask.toLocaleString() : 'N/A'}</td><td>${row.bid !== -1 ? row.bid.toLocaleString() : 'N/A'}</td><td>${row.valuePerToken.toFixed(2)}</td></tr>`;
         }
@@ -301,7 +301,7 @@ fetchData();
     <p>
       Fork by physon<br />
       PM physon in game for issues, or put in a bug on <a href="https://github.com/GoldenHoundGit/sunstone">Github</a><br />
-      Big thanks and love to to: Metzil, Lurpa, miku, Joethedestroyer<br />
+      Big thanks and love to to: Metzli, Lurpa, miku, Joethedestroyer<br />
       Originally by
       <a href="https://github.com/GoldenHoundGit/sunstone">GoldenHound</a><br /><br />
       <a href="https://mwilinks.site/">Milky Way Idle Link Collection</a>
