--- a/dungeon.html
+++ b/dungeon.html
@@ -300,7 +300,7 @@ fetchData();
 </script>
     <p>
       Fork by physon<br />
-      PM physon in game for issues, or put in a bug on <a href="https://github.com/GoldenHoundGit/sunstone">Github</a><br />
+      PM physon in game for issues, or put in a bug on <a href="https://github.com/hypnoshh/sunstone">Github</a><br />
       Big thanks and love to to: Metzli, Lurpa, miku, Joethedestroyer<br />
       Originally by
       <a href="https://github.com/GoldenHoundGit/sunstone">GoldenHound</a><br /><br />
